Fix maven uberjar build and move variables to dotenv
- Fix jar to include dependencies via maven assembly run on package
- Move varibale names to .env for easy configuration

--- a/env.example
+++ b/env.example
@@ -1,1 +1,4 @@
 SPLIT_API_KEY=<put-your-split-api-key-here>
+FEATURE_FLAG_NAME=<put-the-name-of-the-feature-flag-here>
+TARGET_KEY=user
+TARGET_USER=user-1
